feat: adding interval for alter time, last update view order, update docs
