# api.yaml
@@ -110,6 +110,21 @@ paths:
       tags:
       - orders
     parameters: []
+  /orders/completed:
+    get:
+      operationId: orders_completed
+      description: ''
+      parameters: []
+      responses:
+        '200':
+          description: ''
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Order'
+      tags:
+      - orders
+    parameters: []
   /orders/{id}/update_admin:
     put:
       operationId: orders_update_admin
